force-app/main/default/objects/Ecommerce_Configuration__c/Ecommerce_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Ecommerce Configuration</label>
</CustomObject>