force-app/main/default/objects/Ecommerce_Configuration__c/fields/Cancel_Url__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Url__c</fullName>
    <label>Cancel Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>