force-app/main/default/objects/Ecommerce_Configuration__c/fields/Failed_Url__c.field-meta.xml
<CustomField>
    <fullName>Failed_Url__c</fullName>
    <label>Failed Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>