force-app/main/default/objects/Ecommerce_Configuration__c/fields/Success_Url__c.field-meta.xml
<CustomField>
    <fullName>Success_Url__c</fullName>
    <label>Success Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>